--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,6 +8,7 @@ main: me.mattstudios.citizenscmd.CitizensCMD
 version: ${project.version}
 name: CitizensCMD
 website: https://spigotmc.org/resources/30224/
+folia-supported: true
 authors: [Mateus Moreira, HexedHero]
 depend: [Citizens]
 softdepend: [PlaceholderAPI, Vault]
